# Cpp-to-C-programmers

TestProjects/Graphs/: CMakeLists.txt
TestProjects/Graphs/src/: CMakeLists.txt  Graphs.cpp  Graphs.h
TestProjects/Graphs/test/: CMakeLists.txt  Graphs_ut.cpp
TestProjects/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
TestProjects/ProjectTemplate/: CMakeLists.txt
TestProjects/ProjectTemplate/src/: CMakeLists.txt
TestProjects/ProjectTemplate/test/: CMakeLists.txt
TestProjects/ProjectWithUT/: CMakeLists.txt
TestProjects/ProjectWithUT/src/: CMakeLists.txt  state_machine.cpp  state_machine.h
TestProjects/ProjectWithUT/test/: CMakeLists.txt  test.cpp
Tools/: GenerateProject.py
part_a/week_1/1_10_summing_array_using_template/: CMakeLists.txt
part_a/week_1/1_10_summing_array_using_template/src/: CMakeLists.txt  summing_array_template.cpp  summing_array_template.h
part_a/week_1/1_10_summing_array_using_template/test/: CMakeLists.txt  test_summing_array_template.cpp
part_a/week_1/1_10_swap_func_using_template/: CMakeLists.txt
part_a/week_1/1_10_swap_func_using_template/src/: CMakeLists.txt  swap.cpp  swap.h
part_a/week_1/1_10_swap_func_using_template/test/: CMakeLists.txt  test_swap.cpp
part_a/week_1/week_1_assessment/: CMakeLists.txt  README.md
part_a/week_1/week_1_assessment/src/: CMakeLists.txt  week_1_assessment.cpp  week_1_assessment.h
part_a/week_1/week_1_assessment/test/: CMakeLists.txt  week_1_assessment_ut.cpp
part_a/week_2/2_01_modify_program/: CMakeLists.txt
part_a/week_2/2_01_modify_program/src/: CMakeLists.txt  modify_program.cpp  modify_program.h
